new body styling

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 }
 
-
+body{
+    background: rgb(56, 56, 55);
+}
 .container{
     display: flex;
     flex-direction: row;
